modules/klar-assets/kubernetes/klar-assets_virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: klar-assets
  namespace: klar-assets
spec:
  gateways:
  - istio-system/internal-tooling-gateway
  hosts:
  - klar-assets.tooling.neutral.klar.internal.io
  http:
  - route:
    - destination:
        host: klar-assets.klar-assets.svc.cluster.local
        port:
          number: 8080
